--- a/p-style.css
+++ b/p-style.css
@@ -9,6 +9,7 @@
   height: 100vh;
   width: 100%;
   background-image: url(images/product-page/ALL\ NATURAL.png);
+  background-repeat: repeat-y;
   background-position: center;
   background-size: cover;
   padding-left: 8%;
@@ -104,5 +105,120 @@
   .nav-links {
     text-align: center;
     width: 100%;
+  }
+}
+
+.product-slider {
+  width: 100%;
+}
+
+.product-slider .shop-carousel {
+  margin-top: 58px;
+}
+
+.shop-carousel .arrows {
+  margin-bottom: 300px;
+}
+
+.carousel {
+  margin: 30px auto 60px;
+  padding: 0 80px;
+}
+.carousel .carousel-item {
+  text-align: center;
+  overflow: hidden;
+}
+.carousel .carousel-item h4 {
+  font-family: "Varela Round", sans-serif;
+}
+.carousel .carousel-item img {
+  max-width: 100%;
+  display: inline-block;
+}
+.carousel .carousel-item .btn {
+  border-radius: 0;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: bold;
+  border: none;
+  background: #ffffff;
+  border-radius: 5px;
+  padding: 6px 15px;
+  margin-top: 5px;
+}
+.carousel .carousel-item .btn:hover {
+  background: #a177ff;
+}
+.carousel .carousel-item .btn i {
+  font-size: 14px;
+  font-weight: bold;
+  margin-left: 5px;
+}
+.carousel .thumb-wrapper {
+  margin: 5px;
+  text-align: left;
+  background: #fff;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+}
+.carousel .thumb-content {
+  padding: 15px;
+  font-size: 13px;
+}
+.carousel-control-prev,
+.carousel-control-next {
+  height: 44px;
+  width: 44px;
+  background: none;
+  margin: auto 0;
+  border-radius: 50%;
+  border: 3px solid rgba(0, 0, 0, 0.8);
+}
+.carousel-control-prev i,
+.carousel-control-next i {
+  font-size: 36px;
+  position: absolute;
+  top: 50%;
+  display: inline-block;
+  margin: -19px 0 0 0;
+  z-index: 5;
+  left: 0;
+  right: 0;
+  color: rgba(0, 0, 0, 0.8);
+  text-shadow: none;
+  font-weight: bold;
+}
+.carousel-control-prev i {
+  margin-left: -3px;
+}
+.carousel-control-next i {
+  margin-right: -3px;
+}
+.carousel-indicators {
+  bottom: -50px;
+}
+.carousel-indicators li,
+.carousel-indicators li.active {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin: 4px;
+  border: none;
+}
+.carousel-indicators li {
+  background: #ababab;
+}
+.carousel-indicators li.active {
+  background: #555;
+}
+
+@media (max-width: 1000px) {
+  .product-slider {
+    /* margin-bottom: 50px; */
+  }
+  body {
+    margin-top: 200px;
+    background-image: url(images/product-page/ALL\ NATURAL.png);
+    background-position: center;
+    background-size: cover;
   }
 }
